syntax = "proto3";

option csharp_namespace = "ThreeL.Blob.Clients.Grpc.Protos";

message UploadFileRequest {
  int64 fileId = 1;
  bytes Content = 2;
}

message UploadFileResponse {
  bool result = 1;
  string message = 2;
}

service FileGrpcService{
	rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
}